--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ Date:10/13/2024
 <body>
     <header>
 	<div class="tab-desk">
-	    <a href:"contact.html">
+	    <a href:"index.html">
 	    	<img src="images/baby-hawk.jpg" alt="rescued baby hawk">
 	    </a>
 	</div>
